# events-aggregator

./: .gitignore  Dockerfile  pyproject.toml  run.sh
.github/workflows/: deploy.yml
src/: main.py
src/api/v1/endpoints/: events.py
src/cache/: seat_cache.py
src/core/: config.py
src/db/: database.py
src/exceptions/: event_exc.py  provider_client_exc.py
src/migration/: env.py
src/migration/versions/: 218b4274cd91_change_status_to_string.py  311e42519119_initial_revision.py  67d3f76be244_add_new_event_statuses.py
src/models/: events.py  sync_metadata.py
src/repository/: events.py  sync_metadata.py  tickets.py
src/schemas/: event_schemas.py  schemas.py  sync_schemas.py  ticket_schemas.py
src/service/: event_provider_client.py  sync_launch.py  sync_service.py  use_cases.py
src/utils/: utils.py
src/worker/: tasks.py
tests/: conftest.py  test_cache.py  test_provider_client.py  test_sync.py
tests/provider_client_tests/: test_provider_client.py
