[project]
name = "events-aggregator"
version = "0.1.0"
description = "Events aggregator service"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "fastapi>=0.133.0",
    "loguru>=0.7.3",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "ruff>=0.15.2",
    "sqlalchemy>=2.0.47",
    "uvicorn>=0.41.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.15.2",
]

[tool.uv]
dev-dependencies = [
    "ruff>=0.15.2",
]

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
